# nanoGPT

./: .gitignore  efficientkan.py  model.py  pyproject.toml  requirements.txt  train.py
config/: train_shakespeare_char.py
