[tool.poetry]
name = "nanogpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.0"
numpy = "^1.26.4"
transformers = "^4.41.0"
datasets = "^2.19.1"
tiktoken = "^0.7.0"
wandb = "^0.17.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
